test/end-to-end/compile-errors/variant-member-multiple.crow
main void()
	_ nat v = r
	_ string v = r
	()

v[t] variant
r record nat v variant-member, string v variant-member
